# xarray-ceos-alos2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  nightly.yaml  pypi.yaml  upstream-dev.yaml
alos2/: decoders.py  dicttoolz.py
alos2/tests/: test_decoders.py
ceos_alos2/: __init__.py  array.py  common.py  datatypes.py  decoders.py  dicttoolz.py  file.py  hierarchy.py  io.py  sar_leader.py  summary.py  testing.py  transformers.py  utils.py  volume_directory.py  xarray.py
ceos_alos2/sar_image/: __init__.py  __main__.py  caching.py  cli.py  enums.py  file_descriptor.py  io.py  metadata.py  processed_data.py  signal_data.py
ceos_alos2/sar_image/caching/: __init__.py  decoders.py  encoders.py  path.py
ceos_alos2/sar_leader/: __init__.py  attitude.py  data_quality_summary.py  dataset_summary.py  facility_related_data.py  file_descriptor.py  io.py  map_projection.py  metadata.py  platform_position.py  radiometric_data.py  structure.py
ceos_alos2/sar_trailer/: __init__.py  file_descriptor.py  image_data.py
ceos_alos2/tests/: test_array.py  test_caching.py  test_datatypes.py  test_decoders.py  test_dicttoolz.py  test_hierarchy.py  test_sar_image.py  test_sar_leader.py  test_summary.py  test_testing.py  test_transformers.py  test_utils.py  test_volume_directory.py  test_xarray.py  utils.py
ceos_alos2/volume_directory/: __init__.py  io.py  metadata.py  structure.py
ci/: install-upstream-dev.sh
ci/requirements/: docs.yaml  environment.yaml
docs/: api.rst  changelog.md  conf.py  index.md  installing.md  requirements.txt  usage.md
