[project]
name = "xarray-ceos-alos2"
requires-python = ">= 3.10"
license = {text = "MIT"}
dependencies = [
  "toolz",
  "python-dateutil",
  "construct>=2.10",
  "fsspec",
  "exceptiongroup; python_version < '3.11'",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ceos_alos2"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "ceos_alos2"

[tool.black]
line-length = 100

[tool.coverage.run]
omit = [
  "*/ceos_alos2/tests/*",
]
source = ["ceos_alos2"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
