[project]
name = "xarray-ceos-alos2"
requires-python = ">= 3.10"
license = {text = "MIT"}
description = "xarray reader for advanced land observing satellite 2 (ALOS2) CEOS files"
readme = "README.md"
dependencies = [
  "toolz",
  "python-dateutil",
  "xarray",
  "xarray-datatree",
  "numpy",
  "construct>=2.10",
  "fsspec",
  "platformdirs",
  "exceptiongroup; python_version < '3.11'",
]
keywords = [
  "xarray",
  "earth-observation",
  "remote-sensing",
  "satellite-imagery",
  "ceos",
  "alos2",
  "sar",
  "synthetic-aperture-radar",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
homepage = "https://xarray-ceos-alos2.readthedocs.io"
documentation = "https://xarray-ceos-alos2.readthedocs.io"
repository = "https://github.com/umr-lops/xarray-ceos-alos2"
changelog = "https://xarray-ceos-alos2.readthedocs.io/en/latest/changelog.html"

[project.scripts]
ceos-alos2-create-cache = "ceos_alos2.sar_image.cli:main"

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ceos_alos2"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "ceos_alos2"

[tool.black]
line-length = 100

[tool.coverage.run]
source = ["ceos_alos2"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
