[project]
name = "xarray-ceos-alos2"
requires-python = ">= 3.10"
license = {text = "MIT"}
description = "xarray reader for advanced land observing satellite 2 (ALOS2) CEOS files"
readme = "README.md"
dependencies = [
  "toolz",
  "python-dateutil",
  "xarray>=2024.10.0",
  "numpy",
  "construct>=2.10",
  "fsspec",
  "platformdirs",
  "exceptiongroup; python_version < '3.11'",
]
keywords = [
  "xarray",
  "earth-observation",
  "remote-sensing",
  "satellite-imagery",
  "ceos",
  "alos2",
  "sar",
  "synthetic-aperture-radar",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
homepage = "https://xarray-ceos-alos2.readthedocs.io"
documentation = "https://xarray-ceos-alos2.readthedocs.io"
repository = "https://github.com/umr-lops/xarray-ceos-alos2"
changelog = "https://xarray-ceos-alos2.readthedocs.io/en/latest/changelog.html"

[project.scripts]
ceos-alos2-create-cache = "ceos_alos2.sar_image.cli:main"

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ceos_alos2"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py310"
builtins = ["ellipsis"]
exclude = [
    ".git",
    ".eggs",
    "build",
    "dist",
    "__pycache__",
]
line-length = 100

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "I",  # isort
    "UP", # Pyupgrade
    "TID", # flake8-tidy-imports
    "W",
]
extend-safe-fixes = [
    "TID252", # absolute imports
]
fixable = ["I", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["ceos_alos2"]
known-third-party=[
    "xarray",
    "toolz",
    "construct",
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.coverage.run]
source = ["ceos_alos2"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
